--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.10",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.59.0",
+    "react-hot-toast": "^2.5.2",
     "react-qr-code": "^2.0.16",
     "react-router-dom": "^7.6.2",
     "socket.io-client": "^4.8.1",
